# newos

./: .gitignore  .gitmodules  CMakeLists.txt  fix_dirs.sh  settings.cmake
hello-world/: main.c
